--- a/1D/1D.html
+++ b/1D/1D.html
@@ -7,12 +7,14 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	</head>
 	<body>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="menu/members.html"> Members</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="menu/albums.html">Albums <span class="sr-only">(current)</span></a>
@@ -38,24 +40,40 @@
   </div>
 </nav>
 
-<div class="carousel-item">
-  <img src="img/img1.jpg" alt="#">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+  <img class="d-block w-100" src="img/img1.jpg" alt="First slide">
   <div class="carousel-caption d-none d-md-block">
     <h5>ONE DIRECTION</h5>
     <p>1D</p>
   </div>
- <img src="img/img2.jpg" alt="#">
+</div>
+    <div class="carousel-item">
+  <img class="d-block w-100" src="img/img2.jpg" alt="Second Slide">
   <div class="carousel-caption d-none d-md-block">
-    <h5>Where We Are - The Concert Film</h5>
-    <p>San Siro Stadium</p>
+    <h5>Where We Are Tour</h5>
+    <p>San Siro Stadium, Italy</p>
   </div>
 </div>
-<img src="img/img3.jpg" alt="#">
+   <div class="carousel-item">
+  <img class="d-block w-100" src="img/img3.jpg" alt="Third slide">
   <div class="carousel-caption d-none d-md-block">
     <h5>The Boys</h5>
     <p>Harry, Liam, Zayn, Louis, Niall</p>
   </div>
 </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 <h2> Who are they? </h2>
 <p> <b> One Direction</b> (also <b> 1D </b>) is a British/Irish boy band formed by Simon Cowell at <i> <b> The X-Factor </i> </b> 2010 in England. The band members <b> Niall Horan</b>, <b> Liam Payne</b>, <b> Zayn Malik</b> (member from 2010 to 2015), <b> Harry Styles</b>, <b> Louis Tomlinson</b> all did an audition for The X-Factor as solo candidates, they all failed and the judges decided to put them together in a band. Harry chose the band name: "<b>One Direction</b>". Even if they arrived third at The X-Factor, they decide to stay united and start a career as a band. They released 5 albums and after the release of Four, One Direction became the first band in the US Billboard 200 history to have their first four albums debut at number one. Their third album, Midnight Memories, was the best-selling album worldwide of 2013. They participated in 4 tours, after the realization of the albums: <i> Up All Night Tour</i> (2011/12), <i> Take Me Home Tour</i> (2013), <i> Where We Are Tour </i> (2014), <i> On the Road Again Tour</i> (2015). Regarding the filmography, in addition to The X-Factor, they took part in a <i> iCarly</i>'s episode (<i>iGo One Direction</i>), <i> Up All Night Live Tour</i> (a video album), <i> Saturday Night Live</i> (as musical guests in  S37 E18, S39 E8, S40 E10), One Direction: <i> This Is Us</i> (a documentary concert film) and One Direction:<i> Where We Are - The Concert Film</i>. One Direction went on a planned hiatus starting in March 2016 to pursue individual projects. July 23, 2020 was exactly <b> 10 years</b> since the band's formation. </p>
 	</body>
