--- a/1D/menu/albums.html
+++ b/1D/menu/albums.html
@@ -7,7 +7,7 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	</head>
 	<body>
-<h2> Albums </h2>
+		<h2><p class="text-secondary">Albums</p></h2>
 		<ul>
 			<li> Up All Night (2011) </li>
 			<li> Take Me Home (2012) </li>
