--- a/1D/menu/members.html
+++ b/1D/menu/members.html
@@ -7,7 +7,7 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	</head>
 	<body>
-<h2> Members </h2>
+		<h2><p class="text-secondary">Members</p></h2>
 	<h3> Niall Horan </h3>
 	<p> <b> Niall James Horan</b> (born 13 September 1993 in Mullingar, Ireland) is an Irish singer and songwriter. He has an older brother, Greg Horan. His parents are Bobby Horan and Maura Gallagher. When he was a child he had asthma. He taught playing guitar by himself and then started singing, in fact on the stage he often accompagnied his voice and his bandmates playing guitar. He enjoyed playing sports, including (in particular) golf and soccer. He dislocated his knee during a tour with 1D, because of a floating kneecap. As solo artist he released two albums: <i> Flicker</i> (2017) and <i> Heartbreak Weather</i> (2020). His most famous songs are: <i> Slow Hands</i>, <i> Nice to Meet Ya</i>, <i> No Judgement</i>. "He <b> loves life</b>!" said his bandmates, in fact Niall <b> laugh for everything</b>, he <b> always has a smile on his face</b>. </p>
 	<img src="img/niall.jpg">
