--- a/1D/menu/songs.html
+++ b/1D/menu/songs.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 
-<h2> Songs </h2>
+		<h2><p class="text-secondary">Songs</p></h2>
 		<div class="container">           
 			<table class="table table-striped">
 				<thead>
