--- a/1D/1D.html
+++ b/1D/1D.html
@@ -7,39 +7,61 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	</head>
 	<body>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-  <img class="d-block w-100" src="img/img1.jpg" alt="First slide">
-  <div class="carousel-caption d-none d-md-block">
-    <h5>ONE DIRECTION</h5>
-    <p>1D</p>
-  </div>
-</div>
-    <div class="carousel-item">
-  <img class="d-block w-100" src="img/img2.jpg" alt="Second Slide">
-  <div class="carousel-caption d-none d-md-block">
-    <h5>Where We Are Tour</h5>
-    <p>San Siro Stadium, Italy</p>
-  </div>
-</div>
-   <div class="carousel-item">
-  <img class="d-block w-100" src="img/img3.jpg" alt="Third slide">
-  <div class="carousel-caption d-none d-md-block">
-    <h5>The Boys</h5>
-    <p>Harry, Liam, Zayn, Louis, Niall</p>
-  </div>
-</div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+<div class="p-3 mb-2 bg-info text-white">
+      <div id="carousel-1D" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+              <li data-target="#carousel-1D" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-1D" data-slide-to="1"></li>
+              <li data-target="#carousel-1D" data-slide-to="2"></li>
+	      </ol>
+	      <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                  <img src="./img/facciatacastello.jpg" alt="First slide" class="mx-auto d-block" width="900" height="700">
+                  <div class="carousel-caption d-none d-md-block">
+                      <h3 style="font-family: Segoe UI">Il castello</h3>
+                      <p style="font-family: Segoe UI">La facciata</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <img src="img/img1.jpg" alt="Second slide" class="mx-auto d-block" widt="900" height="700">
+                  <div class="carousel-caption d-none d-md-block">
+                      <h3 style="font-family: Segoe UI">Il castello</h3>
+                      <p style="font-family: Segoe UI">Il cortile interno</p>
+                  </div>
+              </div>
+<div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                  <img src="img/img2.jpg" alt="First slide" class="mx-auto d-block" width="900" height="700">
+                  <div class="carousel-caption d-none d-md-block">
+                      <h3 style="font-family: Segoe UI">Il castello</h3>
+                      <p style="font-family: Segoe UI">La facciata</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <img src="img/img3.jpg" alt="Second slide" class="mx-auto d-block" widt="900" height="700">
+                  <div class="carousel-caption d-none d-md-block">
+                      <h3 style="font-family: Segoe UI">Il castello</h3>
+                      <p style="font-family: Segoe UI">Il cortile interno</p>
+                  </div>
+	</div>
+	 <div class="carousel-item">
+                  <img src="./img/cinepresa.jpg" alt="Third slide" class="mx-auto d-block" width="900" height="700">
+                  <div class="carousel-caption d-none d-md-block">
+                      <h3 style="font-family: Segoe UI">L'esposizione</h3>
+                      <p style="font-family: Segoe UI">La cinepresa</p>
+                  </div>
+              </div>                                                                                
+          </div>
+          <a class="carousel-control-prev" href="#carousel-1D" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel-1D" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
+
 
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
   <a class="navbar-brand" href="menu/members.html"> Members</a>
