--- a/1D/1D.html
+++ b/1D/1D.html
@@ -7,7 +7,7 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	</head>
 	<body>
-<div class="p-3 mb-2 bg-info text-white">
+<div class="p-3 mb-2 text-white">
       <div id="carousel-1D" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
               <li data-target="#carousel-1D" data-slide-to="0" class="active"></li>
@@ -16,33 +16,27 @@
 	      </ol>
 	      <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
-                  <img src="./img/facciatacastello.jpg" alt="First slide" class="mx-auto d-block" width="900" height="700">
+                  <img src="img/img1.jpg" alt="First slide" class="mx-auto d-block" width="900" height="700">
                   <div class="carousel-caption d-none d-md-block">
-                      <h3 style="font-family: Segoe UI">Il castello</h3>
-                      <p style="font-family: Segoe UI">La facciata</p>
+                      <h3 style="font-family: Segoe UI">ONE DIRECTION</h3>
+                      <p style="font-family: Segoe UI">1D</p>
                   </div>
               </div>
               <div class="carousel-item">
-                  <img src="img/img1.jpg" alt="Second slide" class="mx-auto d-block" widt="900" height="700">
+                  <img src="img/img2.jpg" alt="Second slide" class="mx-auto d-block" widt="900" height="700">
                   <div class="carousel-caption d-none d-md-block">
-                      <h3 style="font-family: Segoe UI">Il castello</h3>
-                      <p style="font-family: Segoe UI">Il cortile interno</p>
+                      <h3 style="font-family: Segoe UI">Where We Are Tour</h3>
+                      <p style="font-family: Segoe UI">San Siro Stadium</p>
                   </div>
               </div>
 <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
-                  <img src="img/img2.jpg" alt="First slide" class="mx-auto d-block" width="900" height="700">
+                  <img src="img/img3.jpg" alt="First slide" class="mx-auto d-block" width="900" height="700">
                   <div class="carousel-caption d-none d-md-block">
-                      <h3 style="font-family: Segoe UI">Il castello</h3>
-                      <p style="font-family: Segoe UI">La facciata</p>
+                      <h3 style="font-family: Segoe UI">The Boys</h3>
+                      <p style="font-family: Segoe UI">Harry, Liam, Zayn, Louis, Niall</p>
                   </div>
               </div>
-              <div class="carousel-item">
-                  <img src="img/img3.jpg" alt="Second slide" class="mx-auto d-block" widt="900" height="700">
-                  <div class="carousel-caption d-none d-md-block">
-                      <h3 style="font-family: Segoe UI">Il castello</h3>
-                      <p style="font-family: Segoe UI">Il cortile interno</p>
-                  </div>
 	</div>
 	 <div class="carousel-item">
                   <img src="./img/cinepresa.jpg" alt="Third slide" class="mx-auto d-block" width="900" height="700">
