--- a/1D/1D.html
+++ b/1D/1D.html
@@ -29,9 +29,8 @@
                       <p style="font-family: Segoe UI">San Siro Stadium</p>
                   </div>
               </div>
-	<div class="carousel-inner" role="listbox">
-              <div class="carousel-item active">
-                  <img src="img/img3.jpg" alt="First slide" class="mx-auto d-block" width="900" height="700">
+	<div class="carousel-item">
+                  <img src="img/img3.jpg" alt="Third slide" class="mx-auto d-block" width="900" height="700">
                   <div class="carousel-caption d-none d-md-block">
                       <h3 style="font-family: Segoe UI">The Boys</h3>
                       <p style="font-family: Segoe UI">Harry, Liam, Zayn, Louis, Niall</p>
