--- a/1D/1D.html
+++ b/1D/1D.html
@@ -7,7 +7,7 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	</head>
 	<body>
-<div class="p-3 mb-2 text-white">
+<div class="p-3 mb-2">
       <div id="carousel-1D" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
               <li data-target="#carousel-1D" data-slide-to="0" class="active"></li>
