--- a/1D/1D.html
+++ b/1D/1D.html
@@ -7,7 +7,39 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	</head>
 	<body>
-<div class="p-3 mb-2">
+		<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="menu/members.html"> Members</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="menu/albums.html">Albums <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="menu/songs.html">Songs</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Curiosity
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="menu/tiu.html">One Direction: This is Us</a>
+          <a class="dropdown-item" href="menu/wwa.html">One Direction: Where We Are - The Concert Film</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="menu/larry.html">Larry</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">#10YearsOf1D</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+		
+<div class="p-3">
       <div id="carousel-1D" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
               <li data-target="#carousel-1D" data-slide-to="0" class="active"></li>
@@ -48,37 +80,7 @@
       </div>
 
 
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="menu/members.html"> Members</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="menu/albums.html">Albums <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="menu/songs.html">Songs</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Curiosity
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="menu/tiu.html">One Direction: This is Us</a>
-          <a class="dropdown-item" href="menu/wwa.html">One Direction: Where We Are - The Concert Film</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="menu/larry.html">Larry</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">#10YearsOf1D</a>
-      </li>
-    </ul>
-  </div>
-</nav>
 
 <h2><p class="text-secondary">Who Are They?</p></h2>
 <p> <b> One Direction</b> (also <b> 1D </b>) is a British/Irish boy band formed by Simon Cowell at <i> <b> The X-Factor </i> </b> 2010 in England. The band members <b> Niall Horan</b>, <b> Liam Payne</b>, <b> Zayn Malik</b> (member from 2010 to 2015), <b> Harry Styles</b>, <b> Louis Tomlinson</b> all did an audition for The X-Factor as solo candidates, they all failed and the judges decided to put them together in a band. Harry chose the band name: "<b>One Direction</b>". Even if they arrived third at The X-Factor, they decide to stay united and start a career as a band. They released 5 albums and after the release of Four, One Direction became the first band in the US Billboard 200 history to have their first four albums debut at number one. Their third album, Midnight Memories, was the best-selling album worldwide of 2013. They participated in 4 tours, after the realization of the albums: <i> Up All Night Tour</i> (2011/12), <i> Take Me Home Tour</i> (2013), <i> Where We Are Tour </i> (2014), <i> On the Road Again Tour</i> (2015). Regarding the filmography, in addition to The X-Factor, they took part in a <i> iCarly</i>'s episode (<i>iGo One Direction</i>), <i> Up All Night Live Tour</i> (a video album), <i> Saturday Night Live</i> (as musical guests in  S37 E18, S39 E8, S40 E10), One Direction: <i> This Is Us</i> (a documentary concert film) and One Direction:<i> Where We Are - The Concert Film</i>. One Direction went on a planned hiatus starting in March 2016 to pursue individual projects. July 23, 2020 was exactly <b> 10 years</b> since the band's formation.</p>
